--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -52,7 +52,4 @@ jobs:
           echo "TAG=${{ github.sha }}" >> .env && \
           docker-compose -f docker-compose.prod.yml down -v || true && \
           docker-compose -f docker-compose.prod.yml pull && \
-          docker-compose -f docker-compose.prod.yml up -d && \
-          docker image prune -af && \
-          docker container prune -f && \
-          docker network prune -f'
+          docker-compose -f docker-compose.prod.yml up -d'
