--- a/package.json
+++ b/package.json
@@ -25,7 +25,7 @@
     "test:cov": "node_modules/.bin/jest --coverage"
   },
   "dependencies": {
-    "@nestjs-modules/mailer": "^1.9.1",
+    "@nestjs-modules/mailer": "^1.11.2",
     "@nestjs/common": "^10.0.0",
     "@nestjs/config": "^3.0.0",
     "@nestjs/core": "^10.0.0",
@@ -52,6 +52,7 @@
     "nestjs-spelunker": "^1.1.5",
     "nodemailer": "^6.9.4",
     "nodemailer-mailgun-transport": "^2.1.5",
+    "nodemailer-mailjet-transport": "^1.0.4",
     "passport": "^0.6.0",
     "passport-jwt": "^4.0.1",
     "passport-local": "^1.0.0",
