--- a/package.json
+++ b/package.json
@@ -64,10 +64,10 @@
     "swagger-ui-express": "^4.6.3",
     "typeorm": "^0.3.17",
     "typeorm-naming-strategies": "^4.1.0",
-    "uuid": "^9.0.0"
+    "uuid": "^9.0.0",
+    "@faker-js/faker": "^8.4.1"
   },
   "devDependencies": {
-    "@faker-js/faker": "^8.4.1",
     "@nestjs/cli": "^10.0.0",
     "@nestjs/schematics": "^10.0.0",
     "@nestjs/testing": "^10.0.0",
